package msg;

message AccountInfo {
    optional string account = 1;
    optional string passwd = 2;
    //optional string phone  = 3;
    //optional string idcard = 4;
    optional uint64 userid = 5;
}

message AccountGateInfo {
    optional string ip = 1;
    optional int32 port = 2;
    optional string verifykey = 3;
}


